--- a/src/App.scss
+++ b/src/App.scss
@@ -1,40 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: 'Forum';
+  src: url(../src/assets/fonts/Forum/Forum-Regular.ttf)
 }
 
 .hero-section-container {
@@ -49,7 +15,7 @@
   }
 
   p, a, h1 {
-    color: var(--bs-gray-400);
+    color: white;
   }
 
   .btns-wrapper {
@@ -61,5 +27,121 @@
 }
 
 p, a {
-    color: var(--bs-gray-400)
+    color: var(--bs-gray-400);
+    font-family: 'Forum';
   }
+
+.menu-btn {
+  display: flex;
+  top: 0;
+  right: 0;
+  z-index: 20;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  color: black;
+  border: 0;
+  background-color: white;
+  margin: 20px;
+
+  .menu-icon {
+    position: absolute;
+    width: 10px;
+    transform: translate(-50%, -50px);
+    left: 50%;
+    top: 50%;
+
+    span {
+      background-color: #161412;
+      position: absolute;
+      height: 2px;
+      transition-duration: 300ms;
+      transition-property: transform;
+      transition-timing-function: ease-in-out;
+    }
+
+    .icon-line {
+      width: 30px;
+      }
+
+    .icon-line:first-child {
+      top: 0px;
+      transform: translateY(-0.375rem);
+    }
+
+    .icon-line:nth-child(2) {
+      top: 3px;
+      transition-property: all;
+      transition-duration: 300ms;
+      transition-delay: 200ms;
+      opacity: 1;
+    }
+
+    .icon-line:last-child {
+      top: 6px;
+      transform: translateY(0.375rem);
+    }
+  }
+
+  &.expanded {
+    background-color: #161412;
+
+    span {
+      background-color: white;
+    }
+
+    .icon-line:nth-child(2) {
+      width: 0;
+      opacity: 0.5;
+    }
+    
+    .icon-line:first-child {
+      transform: translateY(3px) rotate(135deg);
+      transition-delay: 200ms;
+    }
+    .icon-line:last-child {
+      transform: translate(-3px) rotate(-135deg);
+      transition-delay: 200ms;
+    }
+  }
+}
+
+.menu-container {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  z-index: 10;
+  height: 100vh;
+  padding-top: 24px;
+  background-color: #161412;
+  color: white;
+  transition-property: all;
+  transition-duration: 300ms;
+  opacity: 0;
+  transform: translateX(-360deg);
+
+  &.expanded {
+    opacity: 1;
+    transform: translateX(0)
+  }
+
+  .menu-list {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    li {
+      list-style: none;
+      
+      a {
+        color: white;
+        font-size: 36px;
+      }
+    }
+  }
+}
